[package]
name = "dwarf-dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking",
                                         "jpeg",
                                         ] }
fastrand = "2.0.1"


# Bevy optimizations: see https://bevyengine.org/learn/book/getting-started/setup/
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
